new page, new feature

--- a/shop.html
+++ b/shop.html
@@ -7,9 +7,10 @@
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords"
-        content="Medellín, Colombia, Hoteles, Hotels, Hoteles en Medellín, Hostales en Medellín, hostal, resort, alojamiento, vacaciones, ofertas, paquetes en Medellín, vacaciones en Medellín, motel, hostal, bed and breakfast, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, viajes, paquete, paquetes, paquetes de tures, tours, tour, tures en medellin">
-    <meta content="Hoteles y hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022."
+    <meta
+        content="tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, baru, islas del rosario, "
+        name="keywords">
+    <meta content="Encuentra más de 100 Tours, Tures en Cartagena 2022, Tours económicos en la Heroica de Cartagena"
         name="description">
     <meta property="og:title" content="Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen">
     <meta property="og:description"
@@ -48,7 +49,7 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Tour<span>Open</span></a>
+            <a href="shop.html" class="navbar-brand">Tour<span>Open</span></a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -78,8 +79,8 @@
                             TourOpen te ayudará en todo lo que necesites en Cartagena.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
-                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
+                            <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -93,8 +94,8 @@
                             Qué mejor que disfrutar con precios accesibles en nuestra tienda.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
-                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
+                            <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -108,8 +109,8 @@
                             Adquiere tures a Islas con transporte, comida y cortesias.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn custom-btn" href="shop.html">Ver Tienda</a>
-                            <a class="btn custom-btn" href="#reservar">Reservar ya!</a>
+                            <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +128,7 @@
     <div>
         <p class="text-center">Las Islas privadas y publicas de Cartagena</p>
     </div>
-    <div class="carrousel">
+    <div id="tours" class="carrousel">
         <div class="carrousel__container">
             <div id="content_product" class="page-content content_product">
                 <!-- Products Here (acountCard.js) -->
@@ -162,6 +163,197 @@
     </div>
 
 
+    <!-- Blog Start -->
+    <div class="blog">
+        <div class="container">
+            <div class="section-header text-center">
+                <p>Alojamientos</p>
+                <h2>Hospedaje en las mejores ciudades de Colombia</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="blog-item">
+                        <div class="blog-img">
+                            <img src="img/aloja.jpg" alt="10 Mejores Tures en cartagena de indias" loading="lazy">
+                        </div>
+                        <div class="blog-content">
+                            <h2 class="blog-title">Los 10 mejores Alojamientos en Cartagena 2022</h2>
+                            <div class="blog-meta">
+                                <p><i class="far fa-list-alt"></i>Admin - TourOpen</p>
+                                <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
+                            </div>
+                            <div class="blog-text">
+                                <p>
+                                    Encontrarás en Cartagena de Indias los mejores Hoteles y hostales de esta ciudad.
+                                    Encuentra en Cartagena Hostales económicos, Hoteles de lujo, Hoteles y Hostales con
+                                    piscina.
+                                </p>
+                                <a class="btn custom-btn" href="hoteles-en-cartagena-de-indias.html">Lo mejor de
+                                    Cartagena</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="blog-item">
+                        <div class="blog-img">
+                            <img src="img/medellin.jpg" alt="10 Mejores Tures en Medellín" loading="lazy">
+                        </div>
+                        <div class="blog-content">
+                            <h2 class="blog-title">Los 10 mejores Alojamientos en Medellín 2022</h2>
+                            <div class="blog-meta">
+                                <p><i class="far fa-list-alt"></i>Admin - TourOpen</p>
+                                <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
+                            </div>
+                            <div class="blog-text">
+                                <p>
+                                    Encontrarás en Medellin los mejores Hoteles y hostales de esta ciudad.
+                                    Encuentra en Medellin Hostales económicos, Hoteles de lujo, Hoteles y Hostales con
+                                    piscina.
+                                </p>
+                                <a class="btn custom-btn" href="hoteles-en-medellin.html">Lo mejor de Medellín</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Blog End -->
+
+
+    <!-- Menu Start -->
+    <div class="menu">
+        <div class="container">
+            <div class="section-header text-center">
+                <p>Tures</p>
+                <h2>Playas y Islas para visitar en Cartagena</h2>
+            </div>
+            <div class="menu-tab">
+                <ul class="nav nav-pills justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="pill" href="#playas">Playas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#islas">Islas</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div id="playas" class="container tab-pane active">
+                        <div class="row">
+                            <div class="col-lg-7 col-md-12">
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/islas.jpg" alt="playa blanca">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Playa Blanca</span> <strong>$280.000</strong></h3>
+                                        <p>Transporte Nautico, Almuerzo, Acceso a las instalaciones, Coctel de
+                                            bienvenida</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_coralina_Cartagena.jpg" alt="isla coralina" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Coralina</span> <strong>$290.000</strong></h3>
+                                        <p>Transporte Nautico, Almuerzo, Acceso a las instalaciones, Coctel de
+                                            bienvenida</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Bendita Beach</span> <strong>$250.000</strong></h3>
+                                        <p>Transporte Nautico, Almuerzo tipo Buffet, Acceso a las instalaciones, Kayaks,
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Mucura Tradicional</span> <strong>$220.000</strong></h3>
+                                        <p>Transporte nautico, Almuerzo, Panoramico Isla San Fernando</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_mucura_en_bote_deportivo_2022.jpg"
+                                            alt="Mucura Bote Deportivo" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Mucura Bote Deportivo</span> <strong>$250.000</strong></h3>
+                                        <p>Transporte nautico, Almuerzo, Panoramico Isla San Fernando</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 d-none d-lg-block">
+                                <img src="img/isla_coralina_Cartagena.jpg" alt="Image" loading="lazy">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="islas" class="container tab-pane fade">
+                        <div class="row">
+                            <div class="col-lg-7 col-md-12">
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/Isla_cholon_cartagena.jpg" alt="Isla Cholon" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Isla Cholon</span> <strong>$170.000</strong></h3>
+                                        <p>Transporte Terrestre & Nautico, Almuerzo, Sillas y Bohio</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Isla Del Sol</span> <strong>$240.000</strong></h3>
+                                        <p>Bienvenida de frutas frescas, Transporte, Sillas Asoleadoras, Almuerzo</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Isla Del Encanto</span> <strong>$250.000</strong></h3>
+                                        <p>Transporte, Piscinas, Playa, Sillas, Almuerzo</p>
+                                    </div>
+                                </div>
+                                <div class="menu-item">
+                                    <div class="menu-img">
+                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plankton" loading="lazy">
+                                    </div>
+                                    <div class="menu-text">
+                                        <h3><span>Baru + Plancton</span> <strong>$150.000</strong></h3>
+                                        <p>Transporte, Almuerzo, Sillas, Refrigerio, Planckton, Almuerzo</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 d-none d-lg-block">
+                                <img src="img/isla_del_sol_cartagena_2022.jpg" alt="isla del sol" loading="lazy">
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="carousel-btn text-center">
+                    <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
+                    <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Menu End -->
+
+
     <!-- Footer Start -->
     <div class="footer">
         <div class="container">
@@ -176,8 +368,15 @@
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://instagram.com/opentour_ctg?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="footer-link">
+                                <h2>Esta Pagina</h2>
+                                <a href="policy-privacy.html">Politica de privacidad, cookie, Termino de uso</a>
+                                <a href="">Ayuda</a>
                             </div>
                         </div>
                     </div>
@@ -205,7 +404,7 @@
         </div>
     </div>
     <!-- Footer End -->
-    <!-- Footer End -->
+
     <a id="checkoutB" href="checkout.html">Pagar</a>
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
