--- a/hoteles-en-bogota.html
+++ b/hoteles-en-bogota.html
@@ -73,11 +73,11 @@
 
 
     <!-- Page Header Start -->
-    <div id="page-h" class="page-header">
+    <div class="page-header">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="h1">Hoteles en Bogotá</h1>
+                    <h1 class="h1">Hoteles en Cartagena de Indias</h1>
                 </div>
                 <div class="col-12">
                     <a href="">Inicio</a>
@@ -89,45 +89,23 @@
                             <label for="originCity">Ciudad</label>
                             <hr>
                             <div class="container-b-city-input">
-                                <i id="todos" class="fi fi-rs-marker"></i>
-                                <input id="input_booking" type="text" placeholder="Dónde">
-                            </div>
-                        </div>
-                        <div class="container-b-check">
-                            <label for="originCity">Check-in - Check-out</label>
-                            <hr>
-                            <div class="container-b-check-input">
-                                <i id="todos" class="fi fi-rr-calendar"></i>
-                                <input id="input_booking" type="text" placeholder="Entrada - Salida">
+                                <i class="fi fi-rs-marker"></i>
+                                <input id="input_booking" type="text" placeholder="Dónde" value="Bogota" disabled>
                             </div>
                         </div>
                         <div class="container-b-room">
                             <label for="originCity">habitación</label>
                             <hr>
                             <div class="container-b-room-input">
-                                <i id="todos" class="fi fi-rr-user"></i>
-                                <input id="input_booking" type="text" placeholder="1 hab, 6 Huespedes">
+                                <i class="fi fi-rr-user"></i>
+                                <input id="rooms" type="text" placeholder="1 habitación...">
                             </div>
                         </div>
                         <div class="container-b-btn">
-                            <a id="btn-cus" class="btn custom-btn"
-                                href="https://www.booking.com/searchresults.es.html?aid=2233299&sid=b002c9a886e1b7d377792e7b91fd1a0e&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D2233299%3Bsid%3Db002c9a886e1b7d377792e7b91fd1a0e%3Btmpl%3Dsearchresults%3Bcheckin_month%3D4%3Bcheckin_monthday%3D11%3Bcheckin_year%3D2022%3Bcheckout_month%3D4%3Bcheckout_monthday%3D12%3Bcheckout_year%3D2022%3Bcity%3D-579943%3Bclass_interval%3D1%3Bdest_id%3D-579943%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Bfrom_sf%3D1%3Bgroup_adults%3D2%3Bgroup_children%3D0%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Bno_rooms%3D1%3Boffset%3D0%3Bpostcard%3D0%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrc%3Dsearchresults%3Bsrc_elem%3Dsb%3Bsrpvid%3D2e799b7cfd7400c1%3Bss%3DCartagena%2520de%2520Indias%3Bss_all%3D0%3Bssb%3Dempty%3Bsshis%3D0%3Bssne%3DCartagena%2520de%2520Indias%3Bssne_untouched%3DCartagena%2520de%2520Indias%26%3B&ss=Bogot%C3%A1%2C+Colombia&is_ski_area=&ssne=Cartagena+de+Indias&ssne_untouched=Cartagena+de+Indias&city=-579943&checkin_year=2022&checkin_month=4&checkin_monthday=11&checkout_year=2022&checkout_month=4&checkout_monthday=12&group_adults=2&group_children=0&no_rooms=1&from_sf=1&sr_change_search=1&ss_raw=bogo&ac_position=0&ac_langcode=es&ac_click_type=b&dest_id=-578472&dest_type=city&iata=BOG&place_id_lat=4.61648&place_id_lon=-74.069374&search_pageview_id=2e799b7cfd7400c1&search_selected=true&search_pageview_id=2e799b7cfd7400c1&ac_suggestion_list_length=5&ac_suggestion_theme_list_length=0">Buscar</a>
+                            <a id="btn-cus" class="btn custom-btn">Buscar</a>
                         </div>
                     </div>
                 </div>
-                <!--ins class="bookingaff" data-aid="2233299" data-target_aid="2233299" data-prod="nsb" data-width="100%"
-                    data-height="auto">
-                    <a href="//www.booking.com?aid=2233299">Booking.com</a>
-                </ins>
-                <script type="text/javascript">
-                    (function (d, sc, u) {
-                        var s = d.createElement(sc), p = d.getElementsByTagName(sc)[0];
-                        s.type = 'text/javascript';
-                        s.async = true;
-                        s.src = u + '?v=' + (+new Date());
-                        p.parentNode.insertBefore(s, p);
-                    })(document, 'script', '//cf.bstatic.com/static/affiliate_base/js/flexiproduct.js');
-                </script>-->
             </div>
         </div>
     </div>
