restructured index js

--- a/hoteles-en-medellin.html
+++ b/hoteles-en-medellin.html
@@ -49,7 +49,7 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="shop.html" class="nav-item nav-link">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="policy-privacy.html" class="nav-item nav-link active">Politica de privacidad</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Alojamientos</a>
@@ -393,7 +393,7 @@
                             TourOpen.
                         </p>
                         <div class="form">
-                            <input class="form-control" placeholder="Email goes here">
+                            <input class="form-control" placeholder="Email">
                             <button class="btn custom-btn">Submit</button>
                         </div>
                     </div>
