--- a/hoteles-en-cartagena-de-indias.html
+++ b/hoteles-en-cartagena-de-indias.html
@@ -52,7 +52,7 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="shop.html" class="nav-item nav-link">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="policy-privacy.html" class="nav-item nav-link active">Politica de privacidad</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Alojamientos</a>
