modified checkout js

--- a/checkout.html
+++ b/checkout.html
@@ -203,7 +203,7 @@
                             <div class="container-btn-shop text-center">
                                 <!--<h2 class="title_check">Aun no has elejido nada para comprar</h2>-->
                                 <img class="img_cart" src="img/cart.jpg" alt="" loading="lazy">
-                                <a href="shop.html" class="btn custom-btn">Comprar en la tienda</a>
+                                <a href="index.html" class="btn custom-btn">Comprar en la tienda</a>
                             </div>
                         </div>
 
