--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/shop.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1528435702352043"
+     crossorigin="anonymous"></script>
 </head>
 
 <body id="body-shop">
