--- a/hoteles-en-medellin.html
+++ b/hoteles-en-medellin.html
@@ -36,6 +36,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1528435702352043"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
