--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/shop.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1528435702352043"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </head>
 
 <body id="body-shop">
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div role="tablist" class="carousel__indicadores_inside">
-    
+
             </div>
         </div>
     </div>
@@ -224,6 +224,16 @@
     <!-- Blog End -->
 
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1528435702352043"
+        crossorigin="anonymous"></script>
+    <!-- horizontal -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1528435702352043" data-ad-slot="4513589680"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
+
     <!-- Menu Start -->
     <div class="menu">
         <div class="container">
@@ -266,7 +276,8 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach" loading="lazy">
+                                        <img src="img/isla_bendita_beach_cartagena.jpg" alt="bendita Beach"
+                                            loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Bendita Beach</span> <strong>$250.000</strong></h3>
@@ -276,7 +287,8 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional" loading="lazy">
+                                        <img src="img/isla_mucura_cartagena_2022.jpg" alt="Mucura tradicional"
+                                            loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Mucura Tradicional</span> <strong>$220.000</strong></h3>
@@ -313,7 +325,8 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol" loading="lazy">
+                                        <img src="img/isla_del_sol_cartagena_2022.jpg" alt="Isla Del Sol"
+                                            loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Isla Del Sol</span> <strong>$240.000</strong></h3>
@@ -322,7 +335,8 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto" loading="lazy">
+                                        <img src="img/isla_del_encanto_Cartagena.jpg" alt="Isla Del Encanto"
+                                            loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Isla Del Encanto</span> <strong>$250.000</strong></h3>
@@ -331,7 +345,8 @@
                                 </div>
                                 <div class="menu-item">
                                     <div class="menu-img">
-                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plankton" loading="lazy">
+                                        <img src="img/baru_y_plancton_cartagena_2022.jpg" alt="Baru y Plankton"
+                                            loading="lazy">
                                     </div>
                                     <div class="menu-text">
                                         <h3><span>Baru + Plancton</span> <strong>$150.000</strong></h3>
@@ -343,7 +358,7 @@
                                 <img src="img/isla_del_sol_cartagena_2022.jpg" alt="isla del sol" loading="lazy">
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <div class="carousel-btn text-center">
