U files, meta og:...

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta
         content="tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, baru, islas del rosario, "
         name="keywords">
+        <meta property="og:image" content="https://toursopen.netlify.app/img/2%20(1).jpg">
     <meta content="Encuentra más de 100 Tours, Tures en Cartagena 2022, Tours económicos en la Heroica de Cartagena"
         name="description">
     <meta property="og:title" content="Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen">
