--- a/checkout.html
+++ b/checkout.html
@@ -56,7 +56,7 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a id="checkout" class="btn custom-btn active" onclick="pay()" href="shop.html">Tienda</a>
+                    <a id="checkout" class="btn custom-btn active" onclick="pay()" href="index.html">Tienda</a>
                 </div>
             </div>
         </div>
