--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="font/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -100,7 +101,7 @@
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +116,7 @@
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +131,7 @@
                         </p>
                         <div class="carousel-btn">
                             <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
+                            <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                         </div>
                     </div>
                 </div>
@@ -381,7 +382,7 @@
                 </div>
                 <div class="carousel-btn text-center">
                     <!--<a class="btn custom-btn" href="#tures">Ver Tures</a>-->
-                    <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap">Whatsapp</a>
+                    <a target="_blank" class="btn custom-btn" href="https://bit.ly/mas-info-wap"><i class="bi bi-whatsapp"></i> Whatsapp</a>
                 </div>
             </div>
         </div>
