--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
                                 <!--<p><i class="fa fa-phone-alt"></i>+012 345 67890</p>-->
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -442,7 +442,7 @@
     <!-- Footer End -->
 
     <a id="checkoutB" href="checkout.html">Pagar</a>
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <a href="#" class="back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.js"></script>
