--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen</title>
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
+    <meta name="google-site-verification" content="moaq-zjEQeEECs574oodRtWr7fVVjgZu9tN5ZZdAVj4" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
         content="tours en cartagena, tours, Caminatas, walking tour, free tour cartagena, pasadia baru, pasadias, pasadia, pasadía barú, colombia acuatica, tours en cartagena todo incluido, tours en cartagena de indias, tures, tours, tour, playa blanca, baru, islas del rosario, "
